created base for max temp, humidity, cloudiness, and wind speed pages

--- a/cloudiness.html
+++ b/cloudiness.html
@@ -44,6 +44,28 @@
         </nav>
       </div>
 
+      <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1 class="page_title">Cloudiness</h1>
+                <hr>
+                <img src="visualizations/CityLatitudeVsCloudiness.png">
+                <p>
+                    Cloudiness description
+                </p>
+            </div>
+            <div class="col">
+              <h2>Visualizations</h2>
+              <hr>
+              <a href="maxtemp.html"><img src="visualizations/CityLatitudeVsMaxTemp.png" width="250" alt="Max Temp"></a>
+              <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" width="250" alt="Cloudiness"></a>                 
+              <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" width="250" alt="Humidity"></a>
+              <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" width="250" alt="Wind Speed"></a>
+            </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
