updated comparison page, included data on wind speed page, begin making things pretty.

--- a/comparisons.html
+++ b/comparisons.html
@@ -45,6 +45,37 @@
       </div>
 
       <!--visualization grid-->
+      <div class="container">
+          <div class="box white">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="page_title">Comparison: Latitude vs. X</h1>
+                    <hr>
+                    <p>Click any plot to get an in-depth analysis.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>vs. Max Temperature</h2>
+                    <a href="maxtemp.html"><img src="visualizations/CityLatitudeVsMaxTemp.png" alt="Max Temp"></a>
+                </div>
+                <div class="col-md-6">
+                    <h2>vs. Humidity</h2>
+                    <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" alt="Humidity"></a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>vs. Cloudiness</h2>
+                    <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" alt="Cloudiness"></a>  
+                </div>
+                <div class="col-md-6">
+                    <h2>vs. Wind Speed</h2>
+                    <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" alt="Wind Speed"></a>
+                </div>
+            </div>
+        </div>
+      </div>
 
 
 
