--- a/windspeed.html
+++ b/windspeed.html
@@ -45,26 +45,31 @@
       </div>
 
       <div class="container">
-          <div class="row">
-              <div class="col">
-                  <h1 class="page_title">Wind Speed</h1>
-                  <hr>
-                  <img src="visualizations/CityLatitudeVsWindSpeed.png">
-                  <p>
-                      Wind Speed description
-                  </p>
-              </div>
-              <div class="col">
-                <h2>Visualizations</h2>
-                <hr>
-                <a href="maxtemp.html"><img src="visualizations/CityLatitudeVsMaxTemp.png" width="250" alt="Max Temp"></a>
-                <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" width="250" alt="Cloudiness"></a>                 
-                <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" width="250" alt="Humidity"></a>
-                <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" width="250" alt="Wind Speed"></a>
-              </div>
-              </div>
-          </div>
-      </div>
+        <div class="row">
+            <div class="col-md-8">
+                <div class="box white">
+                    <h1 class="page_title">Wind Speed</h1>
+                    <hr>
+                    <img src="visualizations/CityLatitudeVsWindSpeed.png">
+                    <p>
+                        Wind Speed description
+                    </p>
+                </div>
+            </div>
+                <div class="col-md-4">
+                    <div class="box white">
+                        <h2>Visualizations</h2>
+                        <hr>
+                        <a href="maxtemp.html"><img src="visualizations/CityLatitudeVsMaxTemp.png" width="250" alt="Max Temp"></a>
+                        <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" width="250" alt="Cloudiness"></a>                 
+                        <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" width="250" alt="Humidity"></a>
+                        <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" width="250" alt="Wind Speed"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
