Data html page created from dataframe, updated visualization pages

--- a/data_og.html
+++ b/data_og.html
@@ -6,7 +6,7 @@
     <!-- required meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Latitude vs. Cloudiness</title>
+    <title>Data</title>
 
     <!-- bootstrap CSS link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -43,28 +43,6 @@
             </ul>
         </nav>
       </div>
-
-      <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1 class="page_title">Cloudiness</h1>
-                <hr>
-                <img src="visualizations/CityLatitudeVsCloudiness.png">
-                <p>
-                    The variance in cloudiness closer to the equator is high and there appears to be no conclusive evidence that there are more or fewer instances of cloudiness dependent upon the location in relation to the equator. Cloudiness varies quite a bit among latitude lines and appears somewhat evenly spread out.
-                </p>
-            </div>
-            <div class="col">
-              <h2>Visualizations</h2>
-              <hr>
-              <a href="maxtemp.html"><img src="visualizations/CityLatitudeVsMaxTemp.png" width="250" alt="Max Temp"></a>
-              <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" width="250" alt="Cloudiness"></a>                 
-              <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" width="250" alt="Humidity"></a>
-              <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" width="250" alt="Wind Speed"></a>
-            </div>
-            </div>
-        </div>
-    </div>
 
 
 
