--- a/humidity.html
+++ b/humidity.html
@@ -51,7 +51,7 @@
                 <hr>
                 <img src="visualizations/CityLatitudeVsHumidity.png">
                 <p>
-                    Humidity description
+                    As we would expect getting closer to the equator, the amount of humidity is significantly high. But an important observation is that there are high levels of humidity the further away from the equator as well, with drops in humidity levels between 20 and 40 degrees latitude in the northern hemisphere and -20 and -40 degrees latitude in the southern hemisphere. The southern hemisphere does not see as high humidity levels as the northern hemisphere.
                 </p>
             </div>
             <div class="col">
