--- a/maxtemp.html
+++ b/maxtemp.html
@@ -51,7 +51,7 @@
               <hr>
               <img src="visualizations/CityLatitudeVsMaxTemp.png">
               <p>
-                  Max temp description
+                  As we would expect, maximum temperatures occur closer to the equator. One interesting observation to note is that the northern hemisphere appears to hold a larger cluster of high temperatures up to about 40 degrees latitude where the southern hemisphere's max temperatures vary a little more. This could also be slightly skewed in terms of the number of cities below the equator vs. above the equator in our dataset.
               </p>
           </div>
           <div class="col">
