--- a/windspeed.html
+++ b/windspeed.html
@@ -52,7 +52,7 @@
                     <hr>
                     <img src="visualizations/CityLatitudeVsWindSpeed.png">
                     <p>
-                        Wind Speed description
+                        While there are some instances of high windspeed closer to the equator, it appears that the majority of wind speeds are mostly under 15 mph, regardless of the distance in relation to the equator. There are few instances of high wind speed that appear more in the northern hemisphere.
                     </p>
                 </div>
             </div>
