Got text wrapping on summary page

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
                 <div class="box white">
                   <h1>Summary: Latitude vs. X</h1>
                   <hr>
-                  <img src="visualizations/CityLatitudeVsMaxTemp.png" width="300">
-                  <p id="landing_page">The purpose of this project was to analyze how weather elements differ based on the closeness to the equator. To begin this analysis, we first created a dataset of 500 random cities based on specific latitude and longitude coordinates. For this part of the analysis, we used a Python library called Citipy, which allowed us to look for the nearest city with geo coordinates. 
+                  
+                  <p id="landing_page">
+                    <img src="visualizations/CityLatitudeVsMaxTemp.png" width="350" align="left">
+                    <br>The purpose of this project was to analyze how weather elements differ based on the closeness to the equator. To begin this analysis, we first created a dataset of 500 random cities based on specific latitude and longitude coordinates. For this part of the analysis, we used a Python library called Citipy, which allowed us to look for the nearest city with geo coordinates. 
                   </br></br>
                     Once the list of cities was obtained, we then utilized the <a href="https://openweathermap.org/api">Open Weather Map API</a> to perform a weather check on each city generated in our list to obtain the max temp, humidity, cloudiness, and wind speed. 
                   </br></br>
