--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <!-- nav bar -->
-    <div class="container">
+    <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <a class="navbar-brand" href="index.html">Latitude</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
       <!--white space-->
       <div class="container">
           <div class="row">
-              <div class="col-md-12">
+              <div class="col-lg-12">
                 <h1> </h1>
               </div>
           </div>
@@ -56,7 +56,7 @@
       <!--summary box-->
       <div class="container">
           <div class="row justify-content-lg-center">
-              <div class="col-lg-9">
+              <div class="col-lg-8">
                 <div class="box white">
                   <h1>Summary: Latitude vs. X</h1>
                   <hr>
@@ -71,14 +71,14 @@
                   </p>
                 </div>
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-4">
                 <div class="box white">
                   <h2>Visualizations</h2>
                   <hr>
-                  <a href="maxtemp.html"><img src="visualizations/CityLatitudeVsMaxTemp.png" width="250" alt="Max Temp"></a>
-                  <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" width="250" alt="Cloudiness"></a>                 
-                  <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" width="250" alt="Humidity"></a>
-                  <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" width="250" alt="Wind Speed"></a>
+                  <a href="maxtemp.html"><img src="visualizations/CityLatitudeVsMaxTemp.png" width="200" alt="Max Temp"></a>
+                  <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" width="200" alt="Cloudiness"></a>                 
+                  <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" width="200" alt="Humidity"></a>
+                  <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" width="200" alt="Wind Speed"></a>
                 </div>
               </div>
           </div>
