got nav bar menu to the right and added additional formatting for each page

--- a/cloudiness.html
+++ b/cloudiness.html
@@ -46,22 +46,25 @@
 
       <div class="container">
         <div class="row">
-            <div class="col">
-                <h1 class="page_title">Cloudiness</h1>
-                <hr>
-                <img src="visualizations/CityLatitudeVsCloudiness.png">
-                <p>
-                    The variance in cloudiness closer to the equator is high and there appears to be no conclusive evidence that there are more or fewer instances of cloudiness dependent upon the location in relation to the equator. Cloudiness varies quite a bit among latitude lines and appears somewhat evenly spread out.
-                </p>
+            <div class="col-md-7">
+                <div class="box white">
+                    <h1 class="page_title">Cloudiness</h1>
+                    <hr>
+                    <img src="visualizations/CityLatitudeVsCloudiness.png">
+                    <p>
+                        The variance in cloudiness closer to the equator is high and there appears to be no conclusive evidence that there are more or fewer instances of cloudiness dependent upon the location in relation to the equator. Cloudiness varies quite a bit among latitude lines and appears somewhat evenly spread out.
+                    </p>
+                </div>
             </div>
-            <div class="col">
-              <h2>Visualizations</h2>
-              <hr>
-              <a href="maxtemp.html"><img src="visualizations/CityLatitudeVsMaxTemp.png" width="250" alt="Max Temp"></a>
-              <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" width="250" alt="Cloudiness"></a>                 
-              <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" width="250" alt="Humidity"></a>
-              <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" width="250" alt="Wind Speed"></a>
-            </div>
+            <div class="col-md-5">
+                <div class="box white">
+                    <h2>Visualizations</h2>
+                    <hr>
+                    <a href="maxtemp.html" ><img src="visualizations/CityLatitudeVsMaxTemp.png" width="200" alt="Max Temp"></a>
+                    <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" width="200" alt="Cloudiness"></a>
+                    <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" width="200" alt="Humidity"></a>
+                    <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" width="200" alt="Wind Speed"></a>
+                </div>
             </div>
         </div>
     </div>
