--- a/humidity.html
+++ b/humidity.html
@@ -46,25 +46,29 @@
 
       <div class="container">
         <div class="row">
-            <div class="col">
-                <h1 class="page_title">Humidity</h1>
-                <hr>
-                <img src="visualizations/CityLatitudeVsHumidity.png">
-                <p>
-                    As we would expect getting closer to the equator, the amount of humidity is significantly high. But an important observation is that there are high levels of humidity the further away from the equator as well, with drops in humidity levels between 20 and 40 degrees latitude in the northern hemisphere and -20 and -40 degrees latitude in the southern hemisphere. The southern hemisphere does not see as high humidity levels as the northern hemisphere.
-                </p>
+            <div class="col-md-7">
+                <div class="box white">
+                    <h1 class="page_title">Humidity</h1>
+                    <hr>
+                    <img src="visualizations/CityLatitudeVsHumidity.png" class="image">
+                    <p>
+                        As we would expect getting closer to the equator, the amount of humidity is significantly high. But an important observation is that there are high levels of humidity the further away from the equator as well, with drops in humidity levels between 20 and 40 degrees latitude in the northern hemisphere and -20 and -40 degrees latitude in the southern hemisphere. The southern hemisphere does not see as high humidity levels as the northern hemisphere.
+                    </p>
+                </div>
             </div>
-            <div class="col">
-              <h2>Visualizations</h2>
-              <hr>
-              <a href="maxtemp.html"><img src="visualizations/CityLatitudeVsMaxTemp.png" width="250" alt="Max Temp"></a>
-              <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" width="250" alt="Cloudiness"></a>                 
-              <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" width="250" alt="Humidity"></a>
-              <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" width="250" alt="Wind Speed"></a>
-            </div>
+            <div class="col-md-5">
+                <div class="box white">
+                    <h2>Visualizations</h2>
+                    <hr>
+                    <a href="maxtemp.html" ><img src="visualizations/CityLatitudeVsMaxTemp.png" width="200" alt="Max Temp"></a>
+                    <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" width="200" alt="Cloudiness"></a>
+                    <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" width="200" alt="Humidity"></a>
+                    <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" width="200" alt="Wind Speed"></a>
+                </div>
             </div>
         </div>
     </div>
+
 
 
 
