--- a/maxtemp.html
+++ b/maxtemp.html
@@ -46,25 +46,29 @@
 
     <div class="container">
       <div class="row">
-          <div class="col">
+          <div class="col-md-7">
+            <div class="box white">
               <h1 class="page_title">Max Temperature</h1>
               <hr>
               <img src="visualizations/CityLatitudeVsMaxTemp.png">
               <p>
                   As we would expect, maximum temperatures occur closer to the equator. One interesting observation to note is that the northern hemisphere appears to hold a larger cluster of high temperatures up to about 40 degrees latitude where the southern hemisphere's max temperatures vary a little more. This could also be slightly skewed in terms of the number of cities below the equator vs. above the equator in our dataset.
               </p>
+            </div>
           </div>
-          <div class="col">
-            <h2>Visualizations</h2>
-            <hr>
-            <a href="maxtemp.html"><img src="visualizations/CityLatitudeVsMaxTemp.png" width="250" alt="Max Temp"></a>
-            <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" width="250" alt="Cloudiness"></a>                 
-            <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" width="250" alt="Humidity"></a>
-            <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" width="250" alt="Wind Speed"></a>
-          </div>
-          </div>
-      </div>
-  </div>
+          <div class="col-md-5">
+            <div class="box white">
+                <h2>Visualizations</h2>
+                <hr>
+                <a href="maxtemp.html" ><img src="visualizations/CityLatitudeVsMaxTemp.png" width="200" alt="Max Temp"></a>
+                <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" width="200" alt="Cloudiness"></a>
+                <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" width="200" alt="Humidity"></a>
+                <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" width="200" alt="Wind Speed"></a>
+            </div>
+        </div>
+    </div>
+</div>
+  
 
 
 
