--- a/comparisons.html
+++ b/comparisons.html
@@ -57,25 +57,26 @@
             <div class="row">
                 <div class="col-md-6">
                     <h2>vs. Max Temperature</h2>
-                    <a href="maxtemp.html"><img src="visualizations/CityLatitudeVsMaxTemp.png" alt="Max Temp"></a>
+                    <a href="maxtemp.html" class="image"><img src="visualizations/CityLatitudeVsMaxTemp.png" alt="Max Temp"></a>
                 </div>
                 <div class="col-md-6">
                     <h2>vs. Humidity</h2>
-                    <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" alt="Humidity"></a>
+                    <a href="humidity.html" class="image"><img src="visualizations/CityLatitudeVsHumidity.png" alt="Humidity"></a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <h2>vs. Cloudiness</h2>
-                    <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" alt="Cloudiness"></a>  
+                    <a href="cloudiness.html" class="image"><img src="visualizations/CityLatitudeVsCloudiness.png" alt="Cloudiness"></a>  
                 </div>
                 <div class="col-md-6">
                     <h2>vs. Wind Speed</h2>
-                    <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" alt="Wind Speed"></a>
+                    <a href="windspeed.html" class="image"><img src="visualizations/CityLatitudeVsWindSpeed.png" alt="Wind Speed"></a>
                 </div>
             </div>
         </div>
-      </div>
+    </div>
+      <!-- </div> -->
 
 
 
