--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <!--summary box-->
       <div class="container">
           <div class="row justify-content-lg-center">
-              <div class="col-lg-8">
+              <div class="col-lg-7">
                 <div class="box white">
                   <h1>Summary: Latitude vs. X</h1>
                   <hr>
@@ -71,18 +71,18 @@
                   </p>
                 </div>
               </div>
-              <div class="col-lg-4">
+              <div class="col-md-5">
                 <div class="box white">
-                  <h2>Visualizations</h2>
-                  <hr>
-                  <a href="maxtemp.html"><img src="visualizations/CityLatitudeVsMaxTemp.png" width="200" alt="Max Temp"></a>
-                  <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" width="200" alt="Cloudiness"></a>                 
-                  <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" width="200" alt="Humidity"></a>
-                  <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" width="200" alt="Wind Speed"></a>
+                    <h2>Visualizations</h2>
+                    <hr>
+                    <a href="maxtemp.html" ><img src="visualizations/CityLatitudeVsMaxTemp.png" width="200" alt="Max Temp"></a>
+                    <a href="cloudiness.html"><img src="visualizations/CityLatitudeVsCloudiness.png" width="200" alt="Cloudiness"></a>
+                    <a href="humidity.html"><img src="visualizations/CityLatitudeVsHumidity.png" width="200" alt="Humidity"></a>
+                    <a href="windspeed.html"><img src="visualizations/CityLatitudeVsWindSpeed.png" width="200" alt="Wind Speed"></a>
                 </div>
-              </div>
-          </div>
+            </div>
         </div>
+    </div>
 
 
     <!-- Optional JavaScript -->
